# web-valheim

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
apps/tui/: Cargo.toml
apps/tui/src/: component.rs  event.rs  main.rs  message.rs  persistence.rs  theme.rs
apps/tui/src/tabs/: cart.rs  items.rs  mod.rs  weather.rs
apps/tui/src/widgets/: list.rs
crates/valheim-data/: Cargo.toml
docs/: DEPLOY.md  recipe-diff-report.md
public/icons/: sprite-manifest.json
scripts/: armors.txt  ashlands_weapons.txt  generate-data-json.ts  generate-sprite.ts  migrate-filter-tags.py  mistlands_weapons.txt  plains_weapons.txt  remaining_weapons.txt  scrape-recipes.py  scrape_armor_stats.py  scrape_weapon_stats.py
src/components/: AddToCartButton.tsx  AdvancedFilterPanel.tsx  ArmorStatsTable.tsx  CartButton.tsx  CartDrawer.tsx  CartWidget.tsx  CompactUpgradeGrid.tsx  ComparisonTable.tsx  DamageIcon.tsx  FilterBar.tsx  HeroDamageBar.tsx  IngredientChip.tsx  ItemIcon.tsx  RecipeRow.tsx  RecipeTable.tsx  StatIcon.tsx  StatTooltip.tsx  TextSizeToggle.tsx  ThemeToggle.tsx  WeatherDayCard.tsx  WeatherForecast.tsx  WeatherPeriodDetail.tsx
src/data/: items.yaml  stations.yaml
src/layouts/: Base.astro
src/lib/: cart.ts  data.ts  filter-categories.ts  filter.ts  icons.ts  loader.ts  (+7 more)
tests/: cart-upgrades.test.ts  cart.test.ts  filter.test.ts  icons.test.ts  loader.test.ts  real-data.test.ts  schema.test.ts  setup.ts  url-state.test.ts  weather.test.ts
(+60 files in other folders)
