[package]
name = "valheim-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "valheim-tui"
path = "src/main.rs"

[dependencies]
valheim-data = { path = "../../crates/valheim-data" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"
